[tool.poetry]
name = "st-theorycraft"
version = "0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "ISC"
packages = [
    { include = "stdata", from = "src" },
]

[tool.poetry.scripts]
stdata = "stdata.console:main"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"
pydantic = "^1.8.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pytest = "^6.2.5"
mypy = "^0.910"
types-requests = "^2.25.11"
poetry = "^1.1.11"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

disallow_any_unimported = true
disallow_any_expr = true

[[tool.mypy.overrides]]
module = [
    "tasks",
    "stdata.console"
]
disallow_any_expr = false

[[tool.mypy.overrides]]
module = [
    "invoke",
]
ignore_missing_imports = true