[tool.poetry]
name = "st-theorycraft"
version = "0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "ISC"
packages = [
    { include = "stdata", from = "src" },
]

[tool.poetry.scripts]
stdata = "stdata.console:main"
stquest = "stquest.console:main"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"
pydantic = "^1.8.2"
click = "^8.0.3"
glpk = "^0.4.6"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pytest = "^6.2.5"
mypy = "^0.910"
types-requests = "^2.25.11"
poetry = "^1.1.11"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tasks",
    "*.console"
]
disallow_any_expr = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "invoke",
    "glpk"
]
ignore_missing_imports = true